// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/HelpAction renders with children 1`] = `
<div
  className="hig__top-nav__action"
>
  <div
    data-mock="flyout"
  >
    <div
      data-mock="flyout-content"
    >
      <div
        className="logo"
      />
    </div>
    <div
      data-mock="flyout-children"
    />
  </div>
</div>
`;

exports[`top-nav/HelpAction renders with children and onClick 1`] = `
<div
  className="hig__top-nav__action"
>
  <div
    data-mock="flyout"
  >
    <div
      data-mock="flyout-content"
    >
      <div
        className="logo"
      />
    </div>
    <div
      data-mock="flyout-children"
    />
  </div>
</div>
`;

exports[`top-nav/HelpAction renders with no props 1`] = `
<div
  className="hig__top-nav__action"
>
  <div
    data-mock="flyout"
  >
    <div
      data-mock="flyout-content"
    />
    <div
      data-mock="flyout-children"
    />
  </div>
</div>
`;
